<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MovieDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_movie_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_movie_item_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:contentDescription="@string/movie_folder_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_movie_vote_average_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/movie_vote_average"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_vote_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_vote_average"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_movie_release_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_release_date"
                    android:textAlignment="center"
                    android:textSize="18sp" />


            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_movie_overview_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_overview"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_overview"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>